 [package]
 name = "telegram-bot"
 version = "0.1.0"
 edition = "2021"
default-run = "telegram-bot"
 
 [dependencies]
 teloxide = { version = "0.12", features = ["macros"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 dotenvy = "0.15"
 pretty_env_logger = "0.5"
env_logger = "0.10"
 log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
 reqwest = "0.11.27"
